<resources>
    <string name="app_name">BringMeLK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BringMe.LK</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="app_logo_desc">App logo</string>
    <string name="login_email_hint">Your Email</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="logout">Logout</string>
    <string name="title_activity_admin_nev">AdminNevActivity</string>
    <string name="title_activity_admin_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_admin_home">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Restaurant Management Strings -->
    <string name="manageResFood">Manage Restaurant Food</string>
    <string name="managefood">View and Edit Available Food Items</string>
    <string name="add_food_item">Add New Food Item</string>
    <string name="category">Category</string>
    <string name="item_name">Item Name</string>
    <string name="enter_item_name_hint">Enter Item Name</string>
    <string name="item_price">Price</string>
    <string name="enter_item_price_hint">Enter Item Price</string>
    <string name="item_description">Description</string>
    <string name="enter_item_description_hint">Enter a item Description</string>
    <string name="upload_image">Upload An Image</string>
    <string name="submitfood">Submit</string>
    <string name="itemdiscount">Discount</string>
    <string name="foodlist">Food List</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDel">Delete</string>
    <string name="enterDiscountHint">Enter Discount Here</string>
    <string name="btnCancel">Cancel</string>
    <string name="updateChanges">Update</string>
</resources>